--- a/index.html
+++ b/index.html
@@ -25,21 +25,17 @@
 
             <li><a href="04_card/index.html">PRACTICA 4: <BR>CARD</BR></a></li>
 
-            <li><a href="platillo/index.html">PRACTICA 5: <BR>RECETA</BR></a></li>
+            <li><a href="05_platillo/index.html">PRACTICA 5: <BR>RECETA</BR></a></li>
 
-            <li><a href="practica6/index.html">PRACTICA 6: <BR>FLEXBOX</BR></a></li>
+            <li><a href="06_flexbox/index.html">PRACTICA 6: <BR>FLEXBOX</BR></a></li>
 
-            <li><a href="grid/index.html">PRACTICA 7: <BR>GRID</BR></a></li>
+            <li><a href="07_grid/index.html">PRACTICA 7: <BR>GRID</BR></a></li>
 
-            <li><a href="grid2/index.html">PRACTICA 8: <BR>GRID 2</BR></a></li>
+            <li><a href="08_grid/index.html">PRACTICA 8: <BR>GRID 2</BR></a></li>
 
-            <li><a href="grid3/index.html">PRACTICA 9: <BR>GRID 3</BR></a></li>
+            <li><a href="09_grid/index.html">PRACTICA 9: <BR>GRID 3</BR></a></li>
 
-            <li><a href="api1/index.html">PRACTICA 10: <BR>CONSUMIR API</BR></a></li>
-
-            <li><a href="api/index.html">PRACTICA 11: <BR>CONSUMIR API USERS</BR></a></li>
-
-            <li><a href="api3/index.html">PRACTICA 12: <BR>CONSUMIR API FOTOS</BR></a></li>
+            <li><a href="clima/index.html">PRACTICA 10: <BR>Clima</BR></a></li>
         </ul>
     </center>
 </body>
